<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="empty_string"></string>
	
    <string name="app_name">Emmenia</string>
    <string name="app_name_settings">Emmenia: Настройки</string>
    <string name="app_name_widget_settings">Emmenia: Цвет виджета</string>
    <string name="action_add">Добавить</string>
    <string name="action_settings">Настройки</string>
    
	<string name="add_dialog_title">Добавление</string>
	<string name="edit_dialog_title">Редактирование</string>
	<string name="remove_dialog_title">Удаление</string>
	
	<string name="remove_dialog_message" formatted="false">Удалить запись на %s?</string>
	<string name="year" formatted="false">%s год</string>
	<string name="day" formatted="false">%s дн.</string>
	<string name="day_cycle" formatted="false">Цикл: %s дн.</string>
	
	<string name="btn_yes">Ок</string>
	<string name="btn_no">Отмена</string>
	<string name="btn_remove">Удалить</string>
	<string name="comment">Комменатрий</string>

	
	<string name="error_read_data">Ошибка чтения данных</string>
	<string name="error_save_data">Ошибка записи данных</string>
	
	<string name="error_add_exist" formatted="false">Запись на %s уже существует</string>
	<string name="error_add_later">Нельзя создать запись на дату больше текущей</string>
	
	<string name="error_no_file_for_read">Нет сохраненных данных</string>
	<string name="no_date">-</string>
	<string name="add_current_date">Добавлена запись на сегодняшнее число</string>
	
	<string name="pref_group_sdcard">Резервная копия</string>
	<string name="pref_group_other">Дополнительно</string>
	<string name="save_on_sdcard">Архивировать</string>
	<string name="save_on_sdcard_summary">Создать резервную копию на SD-карте</string>
	<string name="restore_from_sdcard">Восстановить</string>
	<string name="restore_from_sdcard_summary">Восстановить из резервной копии</string>
	<string name="remove_all">Удалить записи</string>
	<string name="remove_all_summary">Удалить все записи</string>
	<string name="about">О программе</string>
	
	<string name="pref_remove_all_title">Удалить записи</string>
	<string name="pref_remove_all_message">Вы уверены, что хотите удалить все записи?</string>
	<string name="toast_remove_all">Все записи удалены</string>
	<string name="toast_remove">Запись удалена</string>
	<string name="toast_remove_all_error">Произошла ошибка при удалении данных</string>
	
	<string name="toast_save_sdcard" formatted="false">Создана резервная копия в %s</string>
	<string name="toast_save_sdcard_error">Произошла ошибка при создании резервной копии</string>
	
	<string name="toast_restore_sdcard">Восстановлены данные из резервной копии</string>
	<string name="toast_restore_sdcard_error">Произошла ошибка при восстановлении данных из резервной копии</string>
	
	<string name="pref_restore_title">Восстановление</string>
	<string name="pref_restore_message">Загрузить данные из файла?\nСуществующие записи будут удалены</string>
	
	<string name="pref_theme_black">Темный</string>
	<string name="pref_theme_white">Светлый</string>
	
	<string name="version" formatted="false">Версия: %s</string>
	<string name="mail">RinaStachel@gmail.com</string>
	
	<string name="dash">-</string>
	<string name="no_data">Нет данных</string>
    <string name="btn_ok">Ок</string>
</resources>
